--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-greeting">Hi,i am</h3>
-                <h1 class="banner-title">Hasibur Rahman</h1>
-                <p>Shot what able cold new hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments</p>
+                <h3 class="banner-greeting">Hi,I am</h3>
+                <h1 class="banner-title">Hardy Mary</h1>
+                <p class="banner description">Shot what able cold new hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact </button>
             </div>
-            <img class="profile-picture" src="images/20230619180503_IMG_0328.JPG" alt="">
+            <img class="profile-picture" src="images/hardy.png" alt="">
         </div>
 
     </header>
     <main>
+        <section class="about">
+        <h3 class="section-title">About me</h3>
+        <p class="section-description">I,am a designer & developer with a passion for web design.I enjoy developing simple,clean and slick websites that provides real value to the end user.Thousands of clients have procured exceptional results while working with me.Delivering work within time and budger which meets clients requirements in our meta. </p>
+    </section>
 
     </main>
     <footer>
