--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
         <section class="about">
         <h3 class="section-title">About me</h3>
         <p class="section-description">I,am a designer & developer with a passion for web design.I enjoy developing simple,clean and slick websites that provides real value to the end user.Thousands of clients have procured exceptional results while working with me.Delivering work within time and budger which meets clients requirements in our meta. </p>
+
+        <div class="about-info-container">
+            <div class="info-info">
+                <h4 class="info-title">Name:</h4>
+                <p class-description>Mary Hardy</p>
+            </div>
+
+            <div class="info-info">
+                <h4 class="info-title">Email:</h4>
+                <p class-description>info@gmail.com</p>
+            </div>
+
+            <div class="info-info">
+                <h4 class="info-title">Date of birth: </h4>
+                <p class-description>01 December 1989</p>
+            </div>
+
+            <div class="info-info">
+                <h4 class="info-title">Form:</h4>
+                <p class-description>Los Angeles,USA</p>
+            </div>
+        </div>
     </section>
 
     </main>
